Aadd firebase y responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Gaddy's Odyssey</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
             <ul class="navbar">
                 <li><a href="" onclick="toggleMenu()">History</a></li>
                 <li><a href="" onclick="toggleMenu()">Characters</a></li>
-                <li><a href="" onclick="toggleMenu()">Ubication</a></li>
                 <li><a href="" onclick="toggleMenu()">Contact</a></li>
+                <li><a href="" onclick="toggleMenu()">About</a></li>
             </ul>
         </header>
 
@@ -39,11 +40,153 @@
         </div>
     </div>
     <section>
+        <div class="subcontent">
+            <h1 style="margin-top: 0px;">History</h1>
+            <p>Gaddis was a passionate researcher and lover of stories, especially those her father used to tell her. Her life was dedicated to studying, defending and protecting her father's stories and ideals. In college, she spent most of her time in the library, immersed in ancient books and manuscripts that fed her thirst for knowledge.<br><br>
+                However, one day like any other, her world was shaken. She heard voices of peers accusing her father of being crazy and that all the ideas embodied in his books were mere hallucinations. Worse, they attributed the same madness to her. Gaddis could not contain her anger and responded vehemently, "You are the crazy ones, my father is better than you could ever be."<br><br>
+                Fed up with the unfounded accusations about her father, Gaddis decided to embark on a voyage across the Pacific Ocean. She took a small boat and brought her father's belongings and stories with her, hoping to find the place he had described in his books.<br><br>
+                While sailing in the middle of the ocean, an unusual storm caught her in violent tides and merciless winds. She lost consciousness and when she finally awoke, she found herself on the shores of a small, seemingly deserted and unknown island in the middle of the ocean.<br><br>
+                Determined to explore the island for resources and signs of life, Gaddis encountered a mysterious inhabitant: a huge mask with unusual limbs. This mask seemed to be somehow connected to the strange phenomena that had mutated the animals in the area. Intrigued and determined to help, Gaddis decided to collaborate with the enigmatic mask.<br><br>
+                As they worked together to discover the reason for the mutations in the island's creatures, Gaddis realized that her partner, the mask, was not what he seemed. Behind its imposing appearance lurked a tormented spirit that had been the guardian of the island and its creatures for centuries. This entity was known as Bestiary and trusted Gaddis to correct the imbalance caused by a malevolent spiritual entity that sought to disturb the natural balance of the planet and keep secret the myths of the creatures that inhabited the island.<br><br>
+                Together, Bestiary and Gaddis set out on a quest to find the natural habitat of the mutated species, facing deadly challenges and uncovering countless ancient secrets about the power of the elements. Over time, the bond between them grew stronger, and Gaddis began to understand the interconnectedness between humanity and the world as we know it.<br><br>
+                The search for the truth about Greek mythological creatures and the discovery of the island's history became a journey of learning and self-reflection for Gaddis. He learned to question established beliefs and embrace ancient wisdom that had been lost to time. At the end of their odyssey, they faced one final challenge: an oversized Leviathan, a mythological creature that represented the final obstacle in their quest to restore balance and preserve the secrets of the island.<br><br>
+                In this story, Gaddis gained knowledge not only about Greek mythological creatures, but also about the importance of protecting truth, cultures and discovery in general. Her journey transformed her into a passionate advocate for history and legends, following in her father's footsteps and ensuring that the stories of Greek mythological creatures and ancient wisdom would endure through time.
+            </p>
+        </div>
+        <div class="subcontent">
+            <h1>Characters</h1>
+            <div class="flex">
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Gaddis</p>
+                    <div class="contsprite">
+                    <div class="sprite1"></div>
+                    </div>
+                    <p class="subtext" style="margin-top: 5px;"><span>Role: </span>Starring<br><span>Description: </span>A passionate researcher with a strong emotional attachment to her father's stories. Her determination and courage make her the leader of this odyssey.</p>
+                </div>
+
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Bestiario</p>
+                    <div class="contsprite">
+                    <div class="sprite2"></div>
+                    </div>
+                    <p class="subtext" style="margin-top: 5px;"><span>Role: </span>Friend<br><span>Description: </span>The Bestiary, an entity linked to the creatures of the island, was their guardian of secrets and harmony until the evil entity disturbed their peace. Joining Gaddis, they sought to restore balance by facing mutations and challenges.</p>
+                </div>
+
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Leviatan</p>
+                    <div class="contsprite">
+                    <div class="sprite3"></div>
+                    </div>
+                    <p class="subtext" style="margin-top: 5px;"><span>Role: </span>Enemy<br><span>Description: </span>In the depths of the ocean, Leviathan, an ancient mythological guardian, awakens from a thousand-year sleep to threaten an island. Gaddis and Bestiary confront the colossus in a fierce battle to restore marine harmony.</p>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Enemigo de agua</p>
+                    <div class="contsprite">
+                        <div class="sprite5"></div>
+                    </div>
+                    <p class="subtext" style="margin-top: 5px;"><span>Role: </span>Enemy<br><span>Description: </span>El Monstruo de Agua, manifestación de la ira, manipula las mareas. Gaddis y Bestiario logran calmarlo, restaurando la paz en los océanos y fortaleciendo la conexión con la isla.</p>
+                </div>
         
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Monstruo de tierra</p>
+                    <div class="contsprite">
+                        <div class="sprite6"></div>
+                    </div>
+                    <p class="subtext" style="margin-top: 5px;"><span>Role: </span>Enemy<br><span>Description: </span>The evil entity corrupts the earthly creatures, giving rise to the Sludge Monster. Gaddis, with knowledge and courage, purifies the land, marking another step towards the restoration of balance.</p>
+                </div>
+
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Espectro</p>
+                    <div class="contsprite">
+                        <div class="sprite7"></div>
+                    </div>
+                    <p class="subtext" style="margin: 5px 0px 10px 0px"><span>Role: </span>Enemy<br><span>Description: </span>Awakened by disturbances on the island, the evil entity seeks to subdue it to its will, causing mutations and unbalancing harmony. Gaddis, with Bestiary, discovers its origin and faces an epic battle to seal it, learning about the fragility of harmony.</p>
+                </div>
+            </div>
+            <div class="flex" style="justify-content: center;">
+                <div class="persona">
+                    <p class="subtitulo" style="margin-top: 10px; text-align: center;">Chimera</p>
+                    <div class="contsprite">
+                        <div class="sprite4"></div>
+                    </div>
+                    <p class="subtext" style="margin-top: 5px;"><span>Role: </span>Enemy<br><span>Description: </span>Mutations affect the creatures of the island, giving rise to the Chimera, symbol of corruption. Gaddis and Bestiario bravely defeat the creature, unraveling the mystery and restoring the integrity of the species.</p>
+                </div>
+            </div>
+        </div>
     </section>
+    <section style="background: linear-gradient(90deg, rgba(92,37,161,1) 0%, rgba(253,67,129,1) 100%); padding: 0px 0px 50px;">
+        <div class="subcontent">
+            <h1 style="color: #ffffff;">Contact</h1>
+            <div class="con-contact">
+                <div class="mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29712.898207998107!2d-104.9038565!3d21.42483145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84273123eaaaf2b9%3A0x16adf6ada41de099!2sUniversidad%20Tecnol%C3%B3gica%20de%20Nayarit!5e0!3m2!1ses!2smx!4v1701127594376!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="form">
+                    <h1 style="margin-bottom: 0px; color:#ffffff;">Send us a message</h1>
+                    <form action="" id="contactForm">
+                        <input type="text" id="name" placeholder="Nombre*" required>
+                        <input type="email" id="email" placeholder="Email*" required>
+                        <textarea placeholder="Mensaje*" id="message" required></textarea>
+                        <input type="submit" class="enviar">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="subcontent">
+            <h1>About</h1>
+            <h1 style="margin-bottom: 10px; font-size: 18px;">Game Requirements</h1>
+            <div class="con-about">
+                <div class="reque" style="margin-right: 10px;">
+                    <h1 style="text-align: left;margin-bottom: 10px; font-size: 18px;">System Requirements:</h1>
+                    <p style="margin-bottom: 10px; text-align: justify;">Operating System: Windows 10<br>
+                    Processor: Intel Core i5 or equivalent<br>
+                    RAM memory: 8 GB<br>
+                    Graphics Card: NVIDIA GeForce GTX 960 or equivalent<br>
+                    Storage: 20 GB available space</p>
+                </div>
+    
+                <div class="reque" style="margin-right: 10px;">
+                    <h1 style="text-align: left;margin-bottom: 10px; font-size: 18px;">Information:</h1>
+                    <p class="subtext" style="text-align: justify;">
+                        <ion-icon style="margin-right: 5px; font-size: 16px;" name="locate-outline"></ion-icon>Universidad Tecnológica de Nayarit, 24 de Febrero, Xalisco, Nayarit
+                    </p>
+                    <p class="subtext" style="text-align: justify;">
+                        <ion-icon style="margin-right: 5px; font-size: 16px;" name="mail-outline"></ion-icon> <a style="color: #000000;" href="mailto:tic-280084@utnay.edu.mx">tic-280084@utnay.edu.mx</a><br>
+                    </p>
+                    <p class="subtext" style="text-align: justify; margin-bottom: 10px;">
+                        <ion-icon style="margin-right: 5px; font-size: 16px;" name="call-outline"></ion-icon> <a style="color: #000000;" href="tel:+523112573618">311 257 36 18</a><br>
+                    </p>
+                </div>
+
+                <div class="reque">
+                    <h1 style="text-align: left; font-size: 18px;">Follow us on our social networks</1>
+                    <div class="con-red">
+                        <a href="https://www.facebook.com/profile.php?id=61553811560998&mibextid=ZbWKwL" target="_blank"><ion-icon name="logo-facebook" style="color: #FD4381;"></ion-icon></a>
+                        <a href="https://wa.me/message/OD7MKD6BEK32B1" target="_blank"><ion-icon style="background: #FD4381;color: #ffffff;" name="logo-whatsapp"></ion-icon></a>
+                    </div>
+                    <h1 style="text-align: justify; font-size: 18px;">Game Requirements:</h1>
+                    <p style="margin-bottom: 10px; text-align: justify;">🖥️ Available on PC</p>
+                </div>
+            </div>
+            <div class="imgsprite">
+                <div class="spritesocial"></div>
+            </div>
+            <p style="text-align: center; margin-bottom: 50px;">🎮 The use of a controller is recommended for an optimal gaming experience.<br>
+                🌐 Internet connection for online updates and features.<br><br>
+                Thank you for joining us on this exciting odyssey! We hope you enjoy exploring the world we have created with so much love and dedication!</p>
+        </div>
+    </section>
+    <footer>
+        <p>© 2023 All rights reserved, NexusGrove®</p>
+    </footer>
 </body>
 <script src="index.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script src="firebase.js"></script>
 </html>
